cmake_minimum_required(VERSION 3.14)

project(lxstreamer LANGUAGES CXX)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")


set(DIR_3RDPARTIES "${CMAKE_CURRENT_SOURCE_DIR}/3rdparty")

list(PREPEND CMAKE_INCLUDE_PATH "${DIR_3RDPARTIES}/ffmpeg/include")
list(PREPEND CMAKE_LIBRARY_PATH "${DIR_3RDPARTIES}/ffmpeg/lib"    )
list(PREPEND CMAKE_PREFIX_PATH  "${DIR_3RDPARTIES}"        )
list(REMOVE_DUPLICATES CMAKE_INCLUDE_PATH)
list(REMOVE_DUPLICATES CMAKE_LIBRARY_PATH)
list(REMOVE_DUPLICATES CMAKE_PREFIX_PATH)

include_directories(${CMAKE_INCLUDE_PATH})
link_directories(${CMAKE_LIBRARY_PATH})

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
find_package(FFMPEG REQUIRED
    COMPONENTS avfilter avformat avcodec avdevice swresample swscale avutil
    )

add_subdirectory(src)
